<resources>
    <string name="app_name">极客头条</string>
    <string name="action_settings">设置</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>

    <string name="translation_element_name">translation_element_name</string>

    <string name="action_share_url">分享</string>
    <string name="action_share_to">分享到</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">从浏览器打开链接</string>
    <string name="action_mailto">mailto:xiaofeng355@sina.com</string>
    <string name="gank_webview_url_host">github.com</string>

    <string name="toast_copy_done">复制成功</string>
    <string name="toast_open_fail">打开链接失败</string>

    <string name="home_activity_tab_tile_top">Top</string>
    <string name="home_activity_tab_tile_android">Android</string>
    <string name="home_activity_tab_tile_ios">iOS</string>
    <string name="home_activity_tab_tile_web">前端</string>
    <string name="home_activity_tab_tile_recognized">推荐</string>
    <string name="home_activity_tab_tile_welfare">福利</string>
    <string name="home_activity_tab_tile_material">拓展资源</string>
    <string name="home_activity_tab_tile_recommend">瞎推荐</string>
    <string name="home_activity_tab_tile_video">休息视频</string>

    <string name="gank_list_item_load_more">正在加载...</string>
    <string name="gank_list_item_reload">点击重新加载</string>

    <string name="gank_list_item_author_name_unknown">未知</string>

    <string name="setting_sharedprefereces_name">local_setttings</string>

    <!-- 主题 -->
    <string name="settting_prefrences_theme_title">主题</string>

    <string name="settting_prefrences_theme_weather_title">天气主题</string>
    <string name="settting_prefrences_theme_weather_status">theme_weather_status</string>
    <string name="settting_prefrences_theme_weather_summary_on">主题随天气动态切换（需要开启定位功能）</string>

    <string name="setting_prefrences_theme_night_title">夜间主题</string>
    <string name="setting_prefrences_theme_night_status">theme_night_status</string>

    <string name="setting_prefrences_theme_night_mode_title">夜间模式</string>
    <string name="setting_prefrences_theme_night_mode_status">theme_night_mode</string>
    <string name="setting_prefrences_theme_night_mode_on">根据时间点自动切换到夜间主题</string>

    <!-- 显示 -->
    <string name="settting_prefrences_display_card_title">显示</string>

    <string name="settting_prefrences_display_no_pic_title">无图模式</string>
    <string name="settting_prefrences_display_no_pic_key">display_no_pic</string>

    <string name="settting_prefrences_display_wifi_pic_title">仅WIFI下显示图片</string>
    <string name="settting_prefrences_display_wifi_pic_key">display_wifi_pic</string>

    <string name="settting_prefrences_display_card_list_title">卡片列表</string>
    <string name="settting_prefrences_display_card_list_off">正在使用图块列表</string>
    <string name="settting_prefrences_display_card_list_on">正在使用卡片列表</string>
    <string name="settting_prefrences_display_car_list_key">display_list_mode</string>

    <string name="settting_prefrences_display_cache_title">页面预加载</string>
    <string name="settting_prefrences_display_cache_summary">设置预加载页面数量，重启生效</string>
    <string name="settting_prefrences_display_cache_dialog_title">请选预加载存页面的数量</string>
    <string name="settting_prefrences_display_cache_key">display_cache_page</string>

    <!-- 关于 -->
    <string name="settting_prefrences_about_title">关于</string>

    <string name="settting_prefrences_about_share_key">about_share</string>
    <string name="settting_prefrences_about_share_title">推荐给朋友</string>
    <string name="settting_prefrences_about_share_summary">好东西一定要分享哦</string>

    <string name="settting_prefrences_about_version_title">信息</string>
    <string name="settting_prefrences_about_version_code">1.4.6\n致力于提供技术干货的应用</string>

    <string name="settting_prefrences_about_author_title">关于作者</string>
    <string name="settting_prefrences_about_author_summary">http://www.xiaofeng.site</string>

    <!--preferences-->
    <string name="setting_prefrences_common_off">禁用</string>
    <string name="setting_prefrences_common_on">开启</string>

    <string-array name="cache_page_entries">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
    </string-array>

    <!-- 发布文章弹窗提示文字 -->
    <string name="home_contribute_dialog_title">发表文章说明</string>
    <string name="home_contribute_dialog_negative_button">考虑一下</string>
    <string name="home_contribute_dialog_positive_button">我要发表</string>
    <string name="home_contribute_dialog_content">该功能需要通过邮件的形式发送内容，具体格式会在邮件正文说明！</string>
    <string name="home_contribute_email_content">你只需要提供相关文章的链接地址，并简单说明文章主题及类型，原创文章或者Github开源库，提交人写你的网络名称即可，请按照以下格式填写，勿删！！！&lt;br&gt;文章链接地址：&lt;br&gt;文章内容描述：&lt;br&gt;文章提交作者：&lt;br&gt;文章分类（Android | iOS | 视频 | 福利 | 拓展资源 | 前端 | 瞎推荐 | App）：&lt;br&gt;</string>

    <string name="home_contribute_emial_title">发表文章</string>

    <!--搜索提示-->
    <string name="gank_search_input_error_alarm">该日期没有资源发布，看看其它时间吧！</string>

</resources>